syntax = "proto3";

package triggers;

import "targets.proto";
import "types.proto";

enum Location {
  ANYWHERE = 0;
  BATTLEFIELD = 1;
  HAND = 2;
  LIBRARY = 3;
}

enum TriggerSource {
  ABILITY_ACTIVATED = 0;
  ATTACKS = 1;
  CAST = 2;
  CREATURE_EXPLORES = 3;
  DEALS_COMBAT_DAMAGE_TO_PLAYER = 4;
  END_STEP = 5;
  ENTERS_THE_BATTLEFIELD = 6;
  EXILED_DURING_CRAFT = 7;
  ONE_OR_MORE_TAPPED = 8;
  PRE_COMBAT_MAIN_PHASE = 9;
  PUT_INTO_GRAVEYARD = 10;
  START_OF_COMBAT = 11;
  TAPPED = 12;
  TARGETED = 13;
  UPKEEP = 14;
}

message Trigger {
  TriggerSource source = 1;
  Location from = 2;
  repeated targets.Restriction restrictions = 3;
}